fix: if otc, receipt is not required

--- a/prime_admin/templates/lms/client_edit_modal.html
+++ b/prime_admin/templates/lms/client_edit_modal.html
@@ -184,7 +184,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="position-relative form-group"><label for="receipt_file" class="">Receipt</label>
-                                        <input name="receipt_file" type="file" accept="image/*" class="form-control-file" required>
+                                        <input name="receipt_file" type="file" accept="image/*" class="form-control-file">
                                         <small class="form-text text-muted">Upload Receipt File. Valid file types: PNG or JPEG</small>
                                     </div>
                                 </div>
