--- a/prime_home/templates/prime_home/index/welcome_section.html
+++ b/prime_home/templates/prime_home/index/welcome_section.html
@@ -1,18 +1,27 @@
-<section class="header-background pb-5 pt-5 text-white">
-    <section class="container pb-5 pt-5">
-
-        <div data-aos="fade-up" class="align-items-center row">
-            <div class="col-lg-6 pb-3 pt-3">
-                <h1 class="display-4 font-weight-bold mb-3">Prime Korean Language and Review Center Inc.</h1>
-                <p class="font-weight-light lead mb-4">OFFERS A LOT OF SERVICES LIKE LEARNING HOW TO SPEAK KOREAN AS FLUENT AS THE NATIVE KOREANS, IMPROVING YOUR LISTENING SKILLS, WRITING AND READING, WE ARE ALSO ASSISTING FILIPINO’S TO PASS THE EPS-TOPIK EXAM FOR THOSE WHO WANTS TO WORK IN SOUTH KOREA AS FACTORY WORKERS. WE ARE HELPING FILIPINOS TO ACHIEVE THEIR DREAMS AND FULFILL THEIR GOALS TO LIFT UP THE STATUS OF THEIR LIVING.
-WE WANT TO HELP YOU GUYS SEEING AND HAVING A PROGRESSIVE FUTURE WITH US 
-LEARN KOREAN LANGUAGE WITH US!!!!</p>
-                <!-- <a class="btn btn-outline-light pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.pre_register')}}">Pre-register</a> -->
-                <a id="btn_contact_now" class="btn btn-light ml-2 pl-4 pr-4 rounded-pill" href="#">Contact Now</a>
+<div>
+    <section class="header-background pb-5 pt-5 text-white">
+        <section class="container pb-5 pt-5">
+    
+            <div data-aos="fade-up" class="align-items-center row">
+                <div class="col-lg-6 pb-3 pt-3">
+                    <h1 class="display-4 font-weight-bold mb-3">Prime Korean Language and Review Center Inc.</h1>
+                    <p class="font-weight-light lead mb-4">OFFERS A LOT OF SERVICES LIKE LEARNING HOW TO SPEAK KOREAN AS FLUENT AS THE NATIVE KOREANS, IMPROVING YOUR LISTENING SKILLS, WRITING AND READING, WE ARE ALSO ASSISTING FILIPINO’S TO PASS THE EPS-TOPIK EXAM FOR THOSE WHO WANTS TO WORK IN SOUTH KOREA AS FACTORY WORKERS. WE ARE HELPING FILIPINOS TO ACHIEVE THEIR DREAMS AND FULFILL THEIR GOALS TO LIFT UP THE STATUS OF THEIR LIVING.
+    WE WANT TO HELP YOU GUYS SEEING AND HAVING A PROGRESSIVE FUTURE WITH US 
+    LEARN KOREAN LANGUAGE WITH US!!!!</p>
+                    <!-- <a class="btn btn-outline-light pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.pre_register')}}">Pre-register</a> -->
+                    <a id="btn_contact_now" class="btn btn-light ml-2 pl-4 pr-4 rounded-pill" href="#">Contact Now</a>
+                </div>
+    
+                <div class="col-lg-6 pb-3 pt-3 text-right">
+                    <h2 class="display-5 font-weight-bold">Latest Passers</h2>
+                    <ul class="lead list-unstyled js-latest-passers">
+                    </ul>
+                    <a class="btn btn-light ml-2 pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.passers')}}">View More</a></div>
+                </div>
             </div>
-        </div>
+        </section>
     </section>
-</section>
+</div>
 <svg viewBox="0 0 1440 185" preserveAspectRatio="none" fill="currentColor" version="1.1"
     xmlns="http://www.w3.org/2000/svg" class="svg-head d-block text-danger" width="100%" height="160">
     <path d="M 0 0 H 1440 V 60 C 1114 355 700 35 516 35 C 333 35 246 199 0 60 V 0 Z" />
