Use google map iframe in landing page for branches

--- a/prime_home/templates/prime_home/index/branches_section.html
+++ b/prime_home/templates/prime_home/index/branches_section.html
@@ -8,43 +8,39 @@
                 <a class="d-block pb-5 text-decoration-none text-white primary-color">
                     <div class="p-5">
                         <h4 class="mb-3">Cebu</h4>
-                        <p class="mb-0">Room 308, 3rd Floor, Doña Luisa Bldg. Fuente Osmena circle, Cebu City</p>
+                        <p class="mb-0">Room 308, 3rd Floor, Doña Luisa Bldg. Fuente Osmena circle, Cebu City, Cebu</p>
                     </div>
-                    <img width="100%" height="400px"
-                        src="{{url_for('prime_home.static', filename='img/cebu_1.jpg')}}" />
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3925.3910880976364!2d123.89156251525868!3d10.31055297043784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a9994ee442fda9%3A0x104653d874a24e93!2sDo%C3%B1a%20Luisa%20Building%2C%20Fuente%20Osme%C3%B1a%20Cir%2C%20Cebu%20City%2C%206000%20Cebu!5e0!3m2!1sen!2sph!4v1635703555948!5m2!1sen!2sph" height="450" width="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </a>
             </div>
             <div id="div_bohol_branch" data-aos="flip-right" data-aos-duration="3000" class="col-md-6 pb-3 pt-3 branch">
-                <a class="d-block mb-md-n5 mt-md-5 pb-5 text-decoration-none text-white primary-color">
+                <a class="d-block pb-5 text-decoration-none text-white primary-color">
                     <div class="p-5">
                         <h4 class="mb-3">Bohol</h4>
                         <p class="mb-0">Room 201 A. 2nd floor,. Saint Jude Building, Gallares St., corner H Grupo St.,
-                            Tagbilaran City.</p>
+                            Tagbilaran City, Bohol</p>
                     </div>
-                    <img width="100%" height="400px"
-                        src="{{url_for('prime_home.static', filename='img/bohol_1.jpg')}}" />
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.4645493860594!2d123.85194767582061!3d9.641288290446614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33aa4db05a8f3a9d%3A0xae8089da4239340e!2sSt.%20Jude%20Building%2C%200045%20Celestino%20Gallares%20St%2C%20Tagbilaran%20City%2C%206300%20Bohol!5e0!3m2!1sen!2sph!4v1726319441828!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </a>
             </div>
             <div id="div_tacloban_branch" data-aos="flip-left" data-aos-duration="3000" class="col-md-6 pb-3 pt-3 branch">
                 <a class="d-block pb-5 text-decoration-none text-white primary-color">
                     <div class="p-5">
                         <h4 class="mb-3">Tacloban</h4>
-                        <p class="mb-0">Room 4B, 4th floor, CATJOY BUILDING, P.Burgos St. Tacloban City.</p>
+                        <p class="mb-0">Room 4B, 4th floor, CATJOY BUILDING, P.Burgos St. Tacloban City, Leyte</p>
                     </div>
-                    <img width="100%" height="400px"
-                        src="{{url_for('prime_home.static', filename='img/tacloban_1.jpg')}}" />
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3913.2372222295458!2d124.99752901526205!3d11.243951953463242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33087109b372fe23%3A0x7143cd0a7dc75222!2sCatJoy%20Building!5e0!3m2!1sen!2sph!4v1635703963483!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
                 </a>
             </div>
             <div id="div_palawan_branch" data-aos="flip-right" data-aos-duration="3000" class="col-md-6 pb-3 pt-3 branch">
-                <a class="d-block mt-md-5 pb-5 text-decoration-none text-white primary-color">
+                <a class="d-block pb-5 text-decoration-none text-white primary-color">
                     <div class="p-5">
                         <h4 class="mb-3">Palawan</h4>
-                        <p class="mb-0">3rd floor, Yusay incorporated building,Lacao st. puerto princesa city, palawan
+                        <p class="mb-0">3rd floor, Yusay incorporated building, Lacao St. Puerto Princesa city, Palawan
                         </p>
                     </div>
-                    <img width="100%" height="400px"
-                        src="{{url_for('prime_home.static', filename='img/palawan_1.jpg')}}" />
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d955.0893969315338!2d118.74038254933042!3d9.740430123977106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33b563ddd19c6223%3A0xd8eaa3581acb22f7!2sYusay%20Credit%20and%20Finance%20Corporation!5e0!3m2!1sen!2sph!4v1635731513508!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </a>
             </div>
         </div>
