--- a/prime_home/templates/prime_home/branches_page.html
+++ b/prime_home/templates/prime_home/branches_page.html
@@ -9,7 +9,6 @@
 <section class="primary-color pt-5 text-white">
     <div class="container mb-4 py-5">
         <h1 class="display-5 fw-bold">Our Branches</h1>
-        <p class="fs-3 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
     <svg viewBox="0 0 1440 185" preserveAspectRatio="none" fill="rgb(0, 97, 168)" version="1.1" xmlns="http://www.w3.org/2000/svg" class="bg-white d-block text-primary" width="100%" height="160">
         <path d="M 0 0 H 1440 V 60 C 1114 355 700 35 516 35 C 333 35 246 199 0 60 V 0 Z"/>
@@ -21,7 +20,7 @@
             <div class="col-xl-9 mx-auto">
             <h2 class="text-favorite h1 mb-4 text-center">CEBU</h2>
                 <img src="{{url_for('prime_home.static', filename='img/cebu_1.jpg')}}" class="img-fluid mb-3 rounded-3" alt="Sample image" width="1280" height="720"/>
-                <p text-center>Room 308, 3rd Floor, Doña Luisa Bldg. Fuente Osmena circle, Cebu City</p>
+                <p text-center>Room 308, 3rd Floor, Doña Luisa Bldg. Fuente Osmena circle, Cebu City, Cebu</p>
                 <div data-aos="zoom-in" data-aos-duration="5000" class="container">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3925.3910880976364!2d123.89156251525868!3d10.31055297043784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a9994ee442fda9%3A0x104653d874a24e93!2sDo%C3%B1a%20Luisa%20Building%2C%20Fuente%20Osme%C3%B1a%20Cir%2C%20Cebu%20City%2C%206000%20Cebu!5e0!3m2!1sen!2sph!4v1635703555948!5m2!1sen!2sph" height="450" width="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>                </div>                 
             </div>
@@ -35,10 +34,10 @@
             <div class="col-xl-9 mx-auto">
             <h2 class="text-favorite h1 mb-4 text-center">BOHOL</h2>
                 <img src="{{url_for('prime_home.static', filename='img/bohol_1.jpg')}}" class="img-fluid mb-3 rounded-3" alt="Sample image" width="1280" height="720"/>
-                <p text-center>Room 201 A. 2nd floor,. Saint Jude Building, Gallares St., corner H Grupo St., Tagbilaran City.
+                <p text-center>Room 201 A. 2nd floor,. Saint Jude Building, Gallares St., corner H Grupo St., Tagbilaran City, Bohol
                 </p>
                 <div data-aos="zoom-in" data-aos-duration="5000" class="container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.3391166172914!2d123.84845041525674!3d9.652037581575783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33aa4c52f59fa553%3A0xee49cb91eae85923!2sSaint%20Jude!5e0!3m2!1sen!2sph!4v1635703794661!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>                </div>     
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.4645493860594!2d123.85194767582061!3d9.641288290446614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33aa4db05a8f3a9d%3A0xae8089da4239340e!2sSt.%20Jude%20Building%2C%200045%20Celestino%20Gallares%20St%2C%20Tagbilaran%20City%2C%206300%20Bohol!5e0!3m2!1sen!2sph!4v1726319441828!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>                </div>     
             </div>
         </div>                     
     </div>                 
@@ -51,7 +50,7 @@
             <div class="col-xl-9 mx-auto">
             <h2 class="text-favorite h1 mb-4 text-center">TACLOBAN</h2>
                 <img src="{{url_for('prime_home.static', filename='img/tacloban_1.jpg')}}" class="img-fluid mb-3 rounded-3" alt="Sample image" width="1280" height="720"/>
-                <p text-center>Room 4B, 4th floor, CATJOY BUILDING, P.Burgos St. Tacloban City.</p>
+                <p text-center>Room 4B, 4th floor, CATJOY BUILDING, P.Burgos St. Tacloban City, Leyte</p>
                 <div data-aos="zoom-in" data-aos-duration="5000" class="container">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3913.2372222295458!2d124.99752901526205!3d11.243951953463242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33087109b372fe23%3A0x7143cd0a7dc75222!2sCatJoy%20Building!5e0!3m2!1sen!2sph!4v1635703963483!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>                </div>     
             </div>
@@ -65,7 +64,8 @@
         <div class="gy-5 row">
             <div class="col-xl-9 mx-auto">
             <h2 class="text-favorite h1 mb-4 text-center">PALAWAN</h2>
-                <p text-center>3rd floor, Yusay incorporated building,Lacao st. puerto princesa city, palawan</p>
+                <img src="{{url_for('prime_home.static', filename='img/palawan_1.jpg')}}" class="img-fluid mb-3 rounded-3" alt="Sample image" width="1280" height="720"/>
+                <p text-center>3rd floor, Yusay incorporated building, Lacao St. Puerto Princesa city, Palawan</p>
                 <div data-aos="zoom-in" data-aos-duration="5000" class="container">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d955.0893969315338!2d118.74038254933042!3d9.740430123977106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33b563ddd19c6223%3A0xd8eaa3581acb22f7!2sYusay%20Credit%20and%20Finance%20Corporation!5e0!3m2!1sen!2sph!4v1635731513508!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
