--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -83,7 +83,6 @@ We are committed to assisting Filipinos in passing the Korean language proficien
                         <path fill="none" d="M0 0h24v24H0z"/>
                         <path d="M15.199 9.945a2.6 2.6 0 0 1-.79-1.551l-.403-3.083-2.73 1.486a2.6 2.6 0 0 1-1.72.273L6.5 6.5l.57 3.056a2.6 2.6 0 0 1-.273 1.72l-1.486 2.73 3.083.403a2.6 2.6 0 0 1 1.55.79l2.138 2.257 1.336-2.807a2.6 2.6 0 0 1 1.23-1.231l2.808-1.336-2.257-2.137zm.025 5.563l-2.213 4.65a.6.6 0 0 1-.977.155l-3.542-3.739a.6.6 0 0 0-.357-.182l-5.107-.668a.6.6 0 0 1-.449-.881l2.462-4.524a.6.6 0 0 0 .062-.396L4.16 4.86a.6.6 0 0 1 .7-.7l5.063.943a.6.6 0 0 0 .396-.062l4.524-2.462a.6.6 0 0 1 .881.45l.668 5.106a.6.6 0 0 0 .182.357l3.739 3.542a.6.6 0 0 1-.155.977l-4.65 2.213a.6.6 0 0 0-.284.284zm.797 1.927l1.414-1.414 4.243 4.242-1.415 1.415-4.242-4.243z"/>
                     </svg>
-                    <h2 class="fw-bold h1 mb-1">1000+</h2>
                     <p class="mb-0">Best Teachers</p>
                 </div>                 
             </div>
@@ -93,8 +92,7 @@ We are committed to assisting Filipinos in passing the Korean language proficien
                         <path fill="none" d="M0 0h24v24H0z"/>
                         <path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-4-7h8a4 4 0 1 1-8 0zm0-2a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm8 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
                     </svg>
-                    <h2 class="fw-bold h1 mb-1">1000+</h2>
-                    <p class="mb-0">Students</p>
+                    <p class="mb-0">Students Training</p>
                 </div>                 
             </div>
             <div class="col-lg-3 col-sm-6 pb-3 pt-3">
@@ -103,8 +101,7 @@ We are committed to assisting Filipinos in passing the Korean language proficien
                         <path fill="none" d="M0 0h24v24H0z"/>
                         <path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-4-7h8a4 4 0 1 1-8 0zm0-2a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm8 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
                     </svg>
-                    <h2 class="fw-bold h1 mb-1">1000+</h2>
-                    <p class="mb-0">Graduates</p>
+                    <p class="mb-0">Graduated Students</p>
                 </div>                 
             </div>
             <div class="col-lg-3 col-sm-6 pb-3 pt-3">
@@ -113,8 +110,7 @@ We are committed to assisting Filipinos in passing the Korean language proficien
                         <path fill="none" d="M0 0h24v24H0z"/>
                         <path d="M17 15.245v6.872a.5.5 0 0 1-.757.429L12 20l-4.243 2.546a.5.5 0 0 1-.757-.43v-6.87a8 8 0 1 1 10 0zm-8 1.173v3.05l3-1.8 3 1.8v-3.05A7.978 7.978 0 0 1 12 17a7.978 7.978 0 0 1-3-.582zM12 15a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"/>
                     </svg>
-                    <h2 class="fw-bold h1 mb-1">1000+</h2>
-                    <p class="mb-0">Awards</p>
+                    <p class="mb-0">Successful Students Working in South Korea</p>
                 </div>                 
             </div>             
         </div>         
@@ -132,37 +128,22 @@ We are committed to assisting Filipinos in passing the Korean language proficien
 			<ul> <!--1-->					
 				<li> 
 					<a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/ceo.jpg')}}"><span><b>JONWEL SUPRESENCIA</b><br>C.E.O</span></a>
-					<div class="content">  									
-					<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
-					</p></div>	
+					
 				</li>			
 				<ul><!--2-->	
 					<li> <a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/admi_head.jpg')}}"><span><b>SALOME SUPRESENCIA</b><br>VICE PRESIDENT</span></a>
-						<div class="content"> 	
-						<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
-						</p></div>
+						
 					</li>	
 					<ul><!--3-->	
 						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_1.jpg')}}"><span><b>VINCENT CORONADO </b><br>VP|BRANCH MANAGER</span></a>
-							<div class="content">  
-							<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.	
-							</p></div>
-							</li>										
-						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_2.jpg')}}"><span><b>DANYLIL ASTURIAS </b><br>VP|BRANCH MANAGER</span></a>
-							<div class="content">  
-							<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
-							</p></div>
-						</li>
-						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_3.jpg')}}"><span><b>GERSON ALDE </b><br>VP|BRANCH MANAGER</span></a>
-							<div class="content">  
-							<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
-							</p></div>
-						</li>
+							
+							</li>	
 						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_accnt_head.jpg')}}"><span><b>HAIREL SUPRESENCIA </b><br>VP|BRANCH MANAGER</span></a>
-							<div class="content">  
-							<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
-							</p></div>
-						</li>									
+							
+						</li>			
+						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/marketing_NARGEO.jpg')}}"><span><b>NARGEO S. GERONA </b><br>MARKETING MANAGER<br>TACLOBAN BRANCH</span></a>
+							
+						</li>								
 						<ul><!--4-->	
 						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_teacher_1.jpg')}}"><span><b> CRISTINE DAEL </b><br>TEACHER|SECRETARY</span></a>
 							<div class="content">  
@@ -180,74 +161,25 @@ We are committed to assisting Filipinos in passing the Korean language proficien
 							Learning is the best thing to do, so that we can aim our goal and I confidently believe that you will. <br><br>
 							I hope to see you soon. 😊
 							</p></div>																	
-						</li>		
-						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_1.jpg')}}"><span> <b>KATHLEEN FATIMA OMILAO RAMOS</b> <br>TEACHER</span></a>
-							<div class="content">  
-							<p> 안녕하세요 여러분! I am Teacher Kath, and I welcome you to Prime Language and Tech. Center. Here in Prime we value you. And just like our name, PRIME will provide you the best possible quality of learning that you will need to achieve your dream. I believe in you, and I believe that one day your dreams will come true. I know it's been a tough journey for everyone but I will guide you until we reach the end of the road -- your dream. And always remember why you started dreaming, is it for you? Your family? Your loved ones? So whenever you find yourself doubting if you can reach your goal, just remember why you started. Remember everything that you've gone through, all your sacrifices and fears that you've overcome. So never ever give up. I know you can do it. And I'll be more than happy to help and guide you with your journey.
-							</p></div>
-						</li>
-						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_2.jpg')}}"><span> <b>JAY-AR MALDO </b><br>TEACHER</span></a>
-							<div class="content">  
-							<p>안녕하세요 여러분! /HELLO EVERYONE 😍 <br><br>
-							"The capacity to learn is a GIFT; the ability to learn is a SKILL; the willingness to learn is a CHOICE."
-							Given the current circumstances, PRIME Language and Technology Center will look different. We will work together to maintain the health and safety standards against COVID-19 pandemic, while sustaining learning Korean language and personalized attention that is synonymous with PRIME.
-							As your mentor I encourage you to think about how you will move forward every day toward earning your certificate and reach the graduation stage.
-							PRIME "the center of learning korean language" offers a lot to keep you on the road and reach your dream to work in South Korea.We are going to spend a lot of time strengthening your reading,listening and writing skills.<br><br>
-							This year is going to be an adventure.I can assure that our class will be full of fun and excitement.I hope you’re just as excited as I am to begin.<br><br>
-							This is Mr. JAYR MALDO your teacher in Korean Language.SEE YOU<br><br>															
-							THANK YOU
-							</p></div>
-						</li>
+						</li>	
 					</ul><!--4-->
 						<ul><!--5-->
 							<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_3.jpg')}}"><span> <b>ROYCE MARIE LABIAN </b><br>TEACHER</span></a>
-								<div class="content">  
-								<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
-								</p></div>
+								
 							</li>
-							<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_4.jpg')}}"><span> <b>MA. THERESA CATALAN </b><br>TEACHER</span></a>
-								<div class="content">  
-								<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
-								</p></div>
-							</li>
-							<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_5.jpg')}}"><span> <b>ARLENE GALIPOSO </b><br>TEACHER</span></a>
-								<div class="content">  
-								<p> 안녕하세요! <br><br>
-								This is teacher Arlene Your korean teacher. I'm so excited to meet you and It is my pleasure to have you in my class. We're going to have fabulous days full of fun and learning. The Korean language is not that easy but I'm here! I'll make it easier for you.  Remember The journey of a thousand miles begins with one step, and this is the first step. Let's learn together and may our dreams come true.<br><br>
-								I hope to see you soon keep safe and god bless.
-								</p></div>
-							</li>
-							<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/os_marketing_1.jpg')}}"><span> <b>RUSSEL GALPO </b><br>OFFICE STAFF | MARKETING</span></a>
-								<div class="content">  
-								<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
-								</p></div>
+							<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_marivie_hellena.jpg')}}"><span> <b>MARIVIE HELLENA </b><br>KOREAN LANGUAGE TEACHER<br>EPS-KLT PASSER<br>PALAWAN BRANCH</span></a>
+								
 							</li>
 						</ul><!--5-->
 							<ul><!--6-->
-								<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_1.jpg')}}"><span> <b>DANGELLI ROSE MUÑOZ </b><br>SECRETARY</span></a>
-									<div class="content">  
-									<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
-									</p></div>
+								<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <br>SECRETARY</span></a>
+									
 								</li>
-								<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_2.jpg')}}"><span> <b>DANYLIL ASTURIAS </b><br>SECRETARY</span></a>
-									<div class="content">  
-									<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
-									</p></div>
-								</li>
-								<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <b>MELODY MARIE MACALISANG </b><br>SECRETARY</span></a>
-									<div class="content">  
-									<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
-									</p></div>
-								</li>
-								<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <b>IRISH GOBANGCO </b><br>SECRETARY</span></a>
-									<div class="content">  
-									<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
-									</p></div>
+								<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <br>SECRETARY</span></a>
+									
 								</li>
 							</ul><!--6-->
 								<ul><!--7-->
-									<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/marketing_1.jpg')}}"><span> <b> JAYSON VERSOSA </b><br>MARKETING STAFF</span></a></li>
-									<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/marketing_2.jpg')}}"><span> <b> CARLO GUANZON </b><br>MARKETING STAFF</span></a></li>
 									<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span>  <br>MARKETING STAFF</span></a></li>
 									<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span>  <br>MARKETING STAFF</span></a></li>
 								</ul><!--7-->
