--- a/prime_home/templates/prime_home/index/welcome_section.html
+++ b/prime_home/templates/prime_home/index/welcome_section.html
@@ -13,7 +13,7 @@
                 </div>
     
                 <div class="col-lg-6 pb-3 pt-3 text-right">
-                    <h2 class="display-5 font-weight-bold">Latest Passers</h2>
+                    <h2 class="display-5 font-weight-bold">TOP-10 Latest Passers</h2>
                     <ul class="lead list-unstyled js-latest-passers">
                     </ul>
                     <a class="btn btn-light ml-2 pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.passers')}}">View More</a></div>
