--- a/prime_home/templates/prime_home/passers_page_by_klt_number.html
+++ b/prime_home/templates/prime_home/passers_page_by_klt_number.html
@@ -23,24 +23,21 @@
                 <div class="text-center mb-5">
                     <h2 class="text-dark">PRIME KOREAN LANGUAGE AND REVIEW CENTER INC.</h2>
                     <h5 class="text-dark">SEC.REG.NO.: CS201817522</h5>
+                    <h1 class="text-dark">PASSERS</h1>
+                    <h3 class="text-dark"><u>Employment Permit System - Test of Proficiency in Korean</u></h3>
+                    <h5 class="text-dark">{{ klt_number }}</h5>
                 </div>
 
-                <table class="align-middle mb-0 table table-bordered table-striped table-hover">
+                <table id="tbl_passers" class="align-middle mb-0 table table-bordered table-striped table-hover">
                     <thead>
                         <tr>
+                            <th class="text-center">ID</th>
                             <th class="text-center">NAME</th>
-                            <th class="text-center">ACTION</th>
+                            <th class="text-center">SCORE</th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for result in results %}
-                            <tr>
-                                <td class="text-center">{{ result._id }}</td>
-                                <td class="text-center">
-                                    <a href="/home/passers/{{ result._id }}">View Passers</a>
-                                </td>
-                            </tr>
-                        {% endfor %}
+                        <!-- load with json -->
                     </tbody>
                 </table>
             </div>
@@ -54,5 +51,27 @@
 <!--End Of Talk Section-->
 
 {% include "prime_home/footer.html" %}
+
+{% endblock %}
+
+
+{% block extra_script %}
+<script type="text/javascript" src="{{ url_for('bp_admin.static', filename='DataTables/datatables.js') }}"></script>
+<script>
+    $(document).ready(function (){
+        var dtPassers = $('#tbl_passers').DataTable({
+            "pageLength": 100,
+            "serverSide": true,
+            "columnDefs": [
+                { "className": "text-center", "visible": false, "targets": 0},
+                { "className": "text-center", "targets": 1},
+                { "className": "text-center", "targets": 2},
+            ],
+            "ajax": {
+                "url": "/home/datatables/passers?klt_number={{ klt_number }}",
+            }
+        });
+    });
+</script>
 
 {% endblock %}
