--- a/prime_home/templates/prime_home/index/branches_section.html
+++ b/prime_home/templates/prime_home/index/branches_section.html
@@ -3,65 +3,6 @@
     <div class="container pb-5 pt-5">
         <h5 class="text-center text-favorite">Our Branches</h5>
         <h2 class="h1 mb-4 text-center text-dark">Some of our offices</h2>
-        <div class="row">
-            <div class="col-md-3 pb-3 pt-3 branch">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3925.3911539132073!2d123.89117627582772!3d10.310547689811328!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a99903be316a83%3A0xf0721ce00c18d841!2sPRIME%20KOREAN%20LANGUAGE%20AND%20REVIEW%20CENTER%20INC.%20-%20CEBU%20MAIN%20OFFICE!5e0!3m2!1sen!2sph!4v1726530442945!5m2!1sen!2sph" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                <div>
-                    <h4 class="mt-3 mb-3">CEBU MAIN BRANCH, CEBU</h4>
-                    <p class="mb-0"><strong>OFFICE ADDRESS:</strong> Doña Luisa Building, Room 308, 3rd Floor, Fuente Osmeña Circle, Cebu City</p>
-                    <p class="mb-0"><strong>LANDMARK:</strong> Located above KFC, across from Fuente Osmeña Circle, and beside Rajah Park Hotel</p>
-                </div>
-            </div>
-            <div class="col-md-3 pb-3 pt-3 branch">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3913.282552031967!2d125.00147047583854!3d11.24061298893777!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3307c504e6bd37b9%3A0xf5c05e531f0735b!2sTACLOBAN%20PRIME%20KOREAN%20TRAINING%20CENTER%20FOR%20SOUTH%20KOREA!5e0!3m2!1sen!2sph!4v1726530828956!5m2!1sen!2sph" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                <div>
-                    <h4 class="mt-3 mb-3">TACLOBAN CITY BRANCH, LEYTE</h4>
-                    <p class="mb-0"><strong>OFFICE ADDRESS:</strong> Room 3c, 3rd floor, Catjoy Building, P.Burgos st. Tacloban City</p>
-                    <p class="mb-0"><strong>LANDMARK:</strong> Next to Megabites Foodshoppe, near the Ironwood Hotel</p>
-                </div>
-            </div>
-            <div class="col-md-3 pb-3 pt-3 branch">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.260261958367!2d125.53834577581364!3d8.948148391109985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3301c1485a29fa77%3A0x54e7f016bc73f196!2sPrime%20Language%20And%20Technology%20Center%20Inc%20Butuan%20Branch!5e0!3m2!1sen!2sph!4v1726530878536!5m2!1sen!2sph" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                <div>
-                    <h4 class="mt-3 mb-3">BUTUAN CITY BRANCH, AGUSAN DEL NORTE</h4>
-                    <p class="mb-0"><strong>OFFICE ADDRESS:</strong> 2nd Floor, EMPRESS Building, Montilla Blvd. Butuan City</p>
-                    <p class="mb-0"><strong>LANDMARK:</strong> Beside the BPI Butuan Branch, near Chowking, and in front of the overpass</p>
-                </div>
-            </div>
-            <div class="col-md-3 pb-3 pt-3 branch">
-                <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.6493748565276!2d124.5924029758489!3d12.067628288170823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3309d9e0088de18b%3A0xee0c1ea2aebd6ea7!2sPRIME%20KOREAN%20LANGUAGE%20TRAINING%20CENTER%20INC.%20-%20CALBAYOG%20CITY%20BRANCH!5e0!3m2!1sen!2sph!4v1726531076889!5m2!1sen!2sph" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    <h4 class="mt-3 mb-3">CALBAYOG CITY BRANCH, SAMAR</h4>
-                    <p class="mb-0"><strong>OFFICE ADDRESS:</strong> Room 305, 3/F, Virsco Home Depot, 888 Bldg. Rosales Blvd., Calbayog City</p>
-                    <p class="mb-0"><strong>LANDMARK:</strong> In front of Legislative hall beside of GSP Girl Scout building</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 pb-3 pt-3 branch">
-                <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d980.1328185496102!2d122.55691526961684!3d10.69344399934066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTDCsDQxJzM2LjQiTiAxMjLCsDMzJzI3LjIiRQ!5e0!3m2!1sen!2sph!4v1726531612363!5m2!1sen!2sph" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    <h4 class="mt-3 mb-3">ILO-ILO CITY BRANCH, ILOILO</h4>
-                    <p class="mb-0"><strong>OFFICE ADDRESS:</strong> Brgy. Baybay tanza rizal estansuela, Iloilo city</p>
-                    <p class="mb-0"><strong>LANDMARK:</strong> Suerte motoplaza YELLOW BUILDING beside YAMAHA and infront of POLICE STATION</p>
-                </div>
-            </div>
-            <div class="col-md-4 pb-3 pt-3 branch">
-                <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3932.303645813077!2d118.7406757!3d9.740326099999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2f85a58c25c79459%3A0xf07d992ef327c6cc!2sPrime%20Korean%20Language%20and%20Review%20Center%20Inc.%20-%20Palawan%20Branch!5e0!3m2!1sen!2sph!4v1726531753421!5m2!1sen!2sph" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    <h4 class="mt-3 mb-3">PUERTO PRINCESA CITY, PALAWAN BRANCH</h4>
-                    <p class="mb-0"><strong>OFFICE ADDRESS:</strong> 3rd floor, Prime korean language and review center inc, Silverstown Bldg, Lacao St, Puerto Princesa, 5300 Palawan</p>
-                    <p class="mb-0"><strong>LANDMARK:</strong> Back of 123convenience store & silvertown buig near at chowking & jollibee Rizal Ave</p>
-                </div>
-            </div>
-            <div class="col-md-4 pb-3 pt-3 branch">
-                <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.464110764015!2d123.8545181!3d9.641325900000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33aa4d5580fdb989%3A0x5b6e069b797f5385!2sPrime%20korean%20language%20training%20center%20bohol%20branch!5e0!3m2!1sen!2sph!4v1726531768304!5m2!1sen!2sph" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    <h4 class="mt-3 mb-3">TAGBILARAN CITY, BOHOL BRANCH</h4>
-                    <p class="mb-0"><strong>OFFICE ADDRESS:</strong> Room 201 A, 2nd Floor, Saint Jude Building, Gallares Street, corner H Grupo Street, Tagbilaran City</p>
-                    <p class="mb-0"><strong>LANDMARK:</strong> Near Borja Family Hospital, beside the Rio Andre Building (Converge), and next to VapeX Lounge (Vape Shop)</p>
-                </div>
-            </div>
-        </div>
+        {% include "prime_home/_branches_list.html" %}
     </div>
 </section>
