--- a/prime_home/templates/prime_home/passers_page.html
+++ b/prime_home/templates/prime_home/passers_page.html
@@ -33,14 +33,18 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for result in results %}
-                            <tr>
-                                <td class="text-center">{{ result._id }}</td>
-                                <td class="text-center">
-                                    <a href="/home/passers/{{ result._id }}">View Passers</a>
-                                </td>
-                            </tr>
-                        {% endfor %}
+                        {% if results %}
+                            {% for result in results %}
+                                <tr>
+                                    <td class="text-center">{{ result._id }}</td>
+                                    <td class="text-center">
+                                        <a href="/home/passers/{{ result._id }}">View Passers</a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        {% else %}
+                            <tr class="odd"><td valign="top" colspan="2" class="text-center">No data available in table</td></tr>
+                        {% endif %}
                     </tbody>
                 </table>
             </div>
