--- a/prime_home/templates/prime_home/passers_page_by_klt_number.html
+++ b/prime_home/templates/prime_home/passers_page_by_klt_number.html
@@ -28,18 +28,24 @@
                     <h5 class="text-dark">{{ klt_number }}</h5>
                 </div>
 
-                <table id="tbl_passers" class="align-middle mb-0 table table-bordered table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th class="text-center">ID</th>
-                            <th class="text-center">NAME</th>
-                            <th class="text-center">SCORE</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- load with json -->
-                    </tbody>
-                </table>
+                {% for branch in branches %}
+                    <h5 class="text-dark">{{ branch.name }}</h5>
+
+                    <table class="align-middle mb-0 table table-bordered table-striped table-hover js-table-passers" data-branch="{{branch.id}}">
+                        <thead>
+                            <tr>
+                                <th class="text-center">ID</th>
+                                <th class="text-center">NAME</th>
+                                <th class="text-center">SCORE</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- load with json -->
+                        </tbody>
+                    </table>
+
+                    <br><br><br>
+                {% endfor %}
             </div>
         </div>                     
     </div>                 
@@ -59,17 +65,19 @@
 <script type="text/javascript" src="{{ url_for('bp_admin.static', filename='DataTables/datatables.js') }}"></script>
 <script>
     $(document).ready(function (){
-        var dtPassers = $('#tbl_passers').DataTable({
-            "pageLength": 100,
-            "serverSide": true,
-            "columnDefs": [
-                { "className": "text-center", "visible": false, "targets": 0},
-                { "className": "text-center", "targets": 1},
-                { "className": "text-center", "targets": 2},
-            ],
-            "ajax": {
-                "url": "/home/datatables/passers?klt_number={{ klt_number }}",
-            }
+        $('.js-table-passers').each(function(){
+            $(this).DataTable({
+                "pageLength": 100,
+                "serverSide": true,
+                "columnDefs": [
+                    { "className": "text-center", "visible": false, "targets": 0},
+                    { "className": "text-center", "targets": 1},
+                    { "className": "text-center", "targets": 2},
+                ],
+                "ajax": {
+                    "url": "/home/datatables/passers?klt_number={{ klt_number }}&branch=" + $(this).data('branch'),
+                }
+            });
         });
     });
 </script>
