Separate by branch

--- a/prime_home/templates/prime_home/passers_page_by_klt_number.html
+++ b/prime_home/templates/prime_home/passers_page_by_klt_number.html
@@ -31,7 +31,7 @@
                 {% for branch in branches %}
                     <h5 class="text-dark">{{ branch.name }}</h5>
 
-                    <table class="align-middle mb-0 table table-bordered table-striped table-hover js-table-passers" data-branch="{{branch.id}}">
+                    <table class="align-middle mb-0 table table-bordered table-striped table-hover js-table-passers" data-branch="{{branch._id}}">
                         <thead>
                             <tr>
                                 <th class="text-center">ID</th>
