Use slider in testimonies

--- a/prime_home/templates/prime_home/base.html
+++ b/prime_home/templates/prime_home/base.html
@@ -77,44 +77,44 @@
 
             $("#btn_proof_of_gallery").click(function (){
                 $('html, body').animate({
-                    scrollTop: $("#div_proof_of_gallery").offset().top
+                    scrollTop: $("#testimonies").offset().top
                 }, 2000);
+                $("#div_proof_of_gallery").trigger('click');
             });
 
             $("#btn_orientation").click(function (){
                 $('html, body').animate({
-                    scrollTop: $("#div_orientation").offset().top
+                    scrollTop: $("#testimonies").offset().top
                 }, 2000);
+                $("#div_orientation").trigger('click');
             })
 
             $("#btn_actual_class").click(function (){
                 $('html, body').animate({
-                    scrollTop: $("#div_actual_class").offset().top
+                    scrollTop: $("#testimonies").offset().top
                 }, 2000);
-            })
-
-            $("#btn_actual_class").click(function (){
-                $('html, body').animate({
-                    scrollTop: $("#div_actual_class").offset().top
-                }, 2000);
+                $("#div_actual_class").trigger('click');
             })
 
             $("#btn_graduation").click(function (){
                 $('html, body').animate({
-                    scrollTop: $("#div_graduation").offset().top
+                    scrollTop: $("#testimonies").offset().top
                 }, 2000);
+                $("#div_graduation").trigger('click');
             })
 
             $("#btn_skill_test").click(function (){
                 $('html, body').animate({
-                    scrollTop: $("#div_skill_test").offset().top
+                    scrollTop: $("#testimonies").offset().top
                 }, 2000);
+                $("#div_skill_test").trigger('click');
             })
 
             $("#btn_departure").click(function (){
                 $('html, body').animate({
-                    scrollTop: $("#div_departure").offset().top
+                    scrollTop: $("#testimonies").offset().top
                 }, 2000);
+                $("#div_departure").trigger('click');
             })
 
             $("#div_cebu_branch").click(function(){
