--- a/prime_home/templates/prime_home/passers_page_by_klt_number.html
+++ b/prime_home/templates/prime_home/passers_page_by_klt_number.html
@@ -31,7 +31,15 @@
                 {% for branch in branches %}
                     <h5 class="text-dark">{{ branch.name }}</h5>
 
-                    <table class="align-middle mb-0 table table-bordered table-striped table-hover js-table-passers" data-branch="{{branch._id}}">
+                    {% if branch.teachers %}
+                        <h5 class="text-dark">
+                            Teacher{% if branch.teachers|length > 1 %}(s){% endif %}:
+                            {{ branch.teachers | map(attribute='fname') | join(', ') }}
+                        </h5>
+                    {% endif %}
+                    <br>
+
+                    <table class="align-middle mb-0 table table-bordered table-striped table-hover js-table-passers" data-branch="{{branch.id}}">
                         <thead>
                             <tr>
                                 <th class="text-center">ID</th>
