--- a/prime_home/templates/prime_home/passers_page_by_klt_number.html
+++ b/prime_home/templates/prime_home/passers_page_by_klt_number.html
@@ -33,8 +33,10 @@
 
                     {% if branch.teachers %}
                         <h5 class="text-dark">
-                            Teacher{% if branch.teachers|length > 1 %}(s){% endif %}:
-                            {{ branch.teachers | map(attribute='fname') | join(', ') }}
+                            Teacher{% if branch.teachers|length > 1 %}s{% endif %}:
+                            {% for teacher in branch.teachers %}
+                                {{ teacher.fname }} {{ teacher.lname }}{% if not loop.last %}, {% endif %}
+                            {% endfor %}
                         </h5>
                     {% endif %}
                     <br>
