Change interval to 3 seconds

--- a/prime_home/templates/prime_home/index/testimonials_section.html
+++ b/prime_home/templates/prime_home/index/testimonials_section.html
@@ -2,7 +2,7 @@
     <div class="container pb-3 pt-3">
         <h5 class="text-center text-favorite">Testimonials</h5>
         <h2 class="h1 mb-4 text-center text-dark">What our students say</h2>
-        <div data-aos="fade-right" id="carousel7" class="carousel slide" data-ride="carousel">
+        <div data-aos="fade-right" id="carousel7" class="carousel slide" data-ride="carousel" data-interval="3000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="align-items-center row">
