--- a/prime_home/templates/prime_home/index/testimonies_section.html
+++ b/prime_home/templates/prime_home/index/testimonies_section.html
@@ -3,7 +3,7 @@ id="testimonies">
 <div class="testimony container pb-5 pt-5">
     <h2 class="h1 mb-4 text-center">Our Testimonies</h2>
     
-    <div data-aos="fade-right" id="carousel8" class="carousel slide" data-ride="carousel">
+    <div data-aos="fade-right" id="carousel8" class="carousel slide" data-ride="carousel" data-interval="3000">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="align-items-center row">
