Add background and fix image overflow

--- a/prime_home/templates/prime_home/index/testimonies_section.html
+++ b/prime_home/templates/prime_home/index/testimonies_section.html
@@ -1,5 +1,5 @@
-<section data-aos="zoom-in" class="bg-light border border-left-0 border-right-0 border-top-0 pb-5 pt-5"
-id="testimonies">
+<section data-aos="zoom-in" class="border border-left-0 border-right-0 border-top-0 pb-5 pt-5"
+id="testimonies" style="background-color: rgb(0 97 168 / 20%);">
 <div class="testimony container pb-5 pt-5">
     <h2 class="h1 mb-4 text-center">Our Testimonies</h2>
     
@@ -7,7 +7,7 @@ id="testimonies">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="align-items-center row">
-                    <div class="col-lg-4 pb-3 pt-3 text-center d-flex align-items-center" style="height:400px">
+                    <div class="col-lg-4 pb-3 pt-3 text-center d-flex align-items-center overflow-hidden" style="height:400px;">
                         <img src="{{url_for('prime_home.static', filename='img/proof_of_gallery.jpg')}}" class="img-fluid">
                     </div>
 
@@ -19,7 +19,7 @@ id="testimonies">
             </div>
             <div class="carousel-item">
                 <div class="align-items-center row">
-                    <div class="col-lg-4 pb-3 pt-3 text-center d-flex align-items-center" style="height:400px">
+                    <div class="col-lg-4 pb-3 pt-3 text-center d-flex align-items-center overflow-hidden" style="height:400px;">
                         <img src="{{url_for('prime_home.static', filename='img/orientation_1.jpg')}}" class="img-fluid">
                     </div>
 
@@ -31,7 +31,7 @@ id="testimonies">
             </div>
             <div class="carousel-item">
                 <div class="align-items-center row">
-                    <div class="col-lg-4 pb-3 pt-3 text-center d-flex align-items-center" style="height:400px">
+                    <div class="col-lg-4 pb-3 pt-3 text-center d-flex align-items-center overflow-hidden" style="height:400px;">
                         <img src="{{url_for('prime_home.static', filename='img/actualclass_01.jpg')}}" class="img-fluid">
                     </div>
 
@@ -43,7 +43,7 @@ id="testimonies">
             </div>
             <div class="carousel-item">
                 <div class="align-items-center row">
-                    <div class="col-lg-4 pb-3 pt-3 text-center d-flex align-items-center" style="height:400px">
+                    <div class="col-lg-4 pb-3 pt-3 text-center d-flex align-items-center overflow-hidden" style="height:400px;">
                         <img src="{{url_for('prime_home.static', filename='img/graduation_01.jpeg')}}" class="img-fluid">
                     </div>
 
@@ -55,7 +55,7 @@ id="testimonies">
             </div>
             <div class="carousel-item">
                 <div class="align-items-center row">
-                    <div class="col-lg-4 pb-3 pt-3 text-center d-flex align-items-center" style="height:400px">
+                    <div class="col-lg-4 pb-3 pt-3 text-center d-flex align-items-center overflow-hidden" style="height:400px;">
                         <img src="{{url_for('prime_home.static', filename='img/skilltest_05.jpeg')}}" class="img-fluid">
                     </div>
 
@@ -67,7 +67,7 @@ id="testimonies">
             </div>
             <div class="carousel-item">
                 <div class="align-items-center row">
-                    <div class="col-lg-4 pb-3 pt-3 text-center d-flex align-items-center" style="height:400px">
+                    <div class="col-lg-4 pb-3 pt-3 text-center d-flex align-items-center overflow-hidden" style="height:400px;">
                         <img src="{{url_for('prime_home.static', filename='img/departure_1.jpg')}}" class="img-fluid">
                     </div>
 
