feat: Assets migration

--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -22,7 +22,7 @@ We are committed to assisting Filipinos in passing the Korean language proficien
 <div class="container" style="margin-top: -11rem;">
     <div class="align-items-center row">
         <div class="col-11 col-md-10 col-xl-8 mx-auto"> 
-            <img src="{{url_for('prime_home.static', filename='img/about.jpg')}}" class="img-fluid mb-3 rounded w-100" alt="Sample image" width="1280" height="720"/>
+            <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/about.jpg" class="img-fluid mb-3 rounded w-100" alt="Sample image" width="1280" height="720"/>
         </div>
     </div>
 </div>
