--- a/prime_home/templates/prime_home/index/about_us_section.html
+++ b/prime_home/templates/prime_home/index/about_us_section.html
@@ -6,7 +6,7 @@ id="about">
             <!-- <a data-aos="zoom-in" data-aos-duration="5000" class="btn btn-danger pl-4 pr-4 rounded-pill" href="#">Learn More</a> -->
             <div data-aos="zoom-in" class="embed-responsive embed-responsive-16by9 mb-4">
                 <video id="vid_welcome" width="560" height="315" controls autoplay muted>
-                    <source src="{{url_for('prime_home.static', filename='img/welcome_vid_1.mp4')}}" type="video/mp4">
+                    <source src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/welcome_vid_1.mp4" type="video/mp4">
                   </video>
             </div>
             <div class="pb-4 pt-4 text-center">
