feat: remarks whitespace checker

--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -737,7 +737,8 @@
                                 swal("Success!", response.message, "success");
                             },
                             error: function (data) {
-                                swal("Error Occured!", "Please refresh the page then try again!", "error");
+                                let message = data.responseJSON.message;
+                                swal("Error Occured!", message, "error");
                             },
                         });
                     }, 500);
