--- a/prime_home/templates/prime_home/base.html
+++ b/prime_home/templates/prime_home/base.html
@@ -14,7 +14,7 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('prime_home.static', filename='css/blocks.css') }}">
     <!-- Custom styles for this template -->
-    <link href="{{ url_for('prime_home.static', filename='css/style.css') }}" rel="stylesheet">
+    <link href="{{ url_for('prime_home.static', filename='css/style.css', v='10102024') }}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
