--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -60,16 +60,20 @@ We are committed to assisting Filipinos in passing the Korean language proficien
                 <p class="lead mb-4">Prime Korean Language and Review Center offers a lot of services like learning how to speak Korean as fluent as the native Koreans, improving your listening skills, writing and reading, We are also assisting Filipino's to pass the EPS-TOPIK exam for those who wants to work in South Korea as factory workers. We are helping Filipinos to achieve their dreams and fulfill their goals to lift up the status of their living</p>
                 <div class="row">
                     <div class="col-md-5">
-                        <h4 class="mb-3 text-dark">Vision</h4> 
-                        <p>
-				Our vision is rooted in continued mentorship, support, and assistance to Filipino students, enabling transformative life changes and creating a brighter future for each individual. We strive to facilitate harmonious and financially secure lives for our students while and after they work abroad.
-                        </p> 
+                        <div class="bg-light px-4 py-4 text-dark text-center">
+                            <h4 class="mb-3 text-dark">Vision</h4> 
+                            <p>
+                    Our vision is rooted in continued mentorship, support, and assistance to Filipino students, enabling transformative life changes and creating a brighter future for each individual. We strive to facilitate harmonious and financially secure lives for our students while and after they work abroad.
+                            </p> 
+                        </div>
                     </div>
                     <div class="col-md-5 offset-md-1">
-                        <h4 class="mb-3 text-dark">Mission</h4> 
-                        <p>
-				Our mission is to deliver intensive Korean language training that equips our students with the proficiency required to pass the Korean language proficiency test prescribed by HRD KOREA incoordination with POEA. We are dedicated to assisting our students in reaching their goals and ensuring that they acquire the essential skills in listening, speaking, reading, and writing in the Korean Language. Through our unwavering dedication, we combine efforts to enable our students to fulfill their dreams of working in South Korea.
-			</p> 
+                        <div class="bg-light px-4 py-4 text-dark text-center">
+                            <h4 class="mb-3 text-dark">Mission</h4> 
+                            <p>
+                                Our mission is to deliver intensive Korean language training that equips our students with the proficiency required to pass the Korean language proficiency test prescribed by HRD KOREA incoordination with POEA. We are dedicated to assisting our students in reaching their goals and ensuring that they acquire the essential skills in listening, speaking, reading, and writing in the Korean Language. Through our unwavering dedication, we combine efforts to enable our students to fulfill their dreams of working in South Korea.
+                            </p> 
+                        </div>
                     </div>
                 </div>                 
             </div>             
