--- a/prime_home/templates/prime_home/index/services_section.html
+++ b/prime_home/templates/prime_home/index/services_section.html
@@ -12,9 +12,9 @@
             <div class="col-xl-9 ml-auto"> 
                 <div class="row"> 
                     <div class="col-lg-4 col-md-6 pb-3 pt-3"> 
-                        <div class="border border-secondary pb-5 pl-4 pr-4 pt-5">
+                        <div class="border border-secondary pb-5 pl-4 pr-4 pt-5 background-korea-spring">
                             <div class="pl-3 pr-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" class="mb-3 text-primary"> 
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" class="mb-3"> 
                                     <g>
                                         <path fill="none" d="M0 0h24v24H0z"/>
                                         <path d="M5 8v12h14V8H5zm0-2h14V4H5v2zm15 16H4a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h16a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1zM7 10h4v4H7v-4zm0 6h10v2H7v-2zm6-5h4v2h-4v-2z"/>
@@ -26,9 +26,9 @@
                         </div>                                 
                     </div>                             
                     <div class="col-lg-4 col-md-6 pb-3 pt-3"> 
-                        <div class="border border-secondary pb-5 pl-4 pr-4 pt-5">
+                        <div class="border border-secondary pb-5 pl-4 pr-4 pt-5 background-korea-autumn">
                             <div class="pl-3 pr-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" class="mb-3 text-primary"> 
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" class="mb-3"> 
                                     <g>
                                         <path fill="none" d="M0 0H24V24H0z"/>
                                         <path d="M15 3c.552 0 1 .448 1 1v2h5c.552 0 1 .448 1 1v13c0 .552-.448 1-1 1H3c-.552 0-1-.448-1-1V7c0-.552.448-1 1-1h5V4c0-.552.448-1 1-1h6zm1 5H8v11h8V8zM4 8v11h2V8H4zm10-3h-4v1h4V5zm4 3v11h2V8h-2z"/>
