Save to google sheet

--- a/prime_home/templates/prime_home/base.html
+++ b/prime_home/templates/prime_home/base.html
@@ -153,7 +153,7 @@
             {% elif category == 'error' %}
             <div class="toast toast-error" aria-live="polite">
                 <div class="toast-progress" style="width: 0%;"></div>
-                <div class="toast-title">Login Failed!</div>
+                <div class="toast-title">Error!</div>
                 <div class="toast-message">{{ message }}</div>
             </div>
             {% endif %}
