--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -143,7 +143,13 @@ We are committed to assisting Filipinos in passing the Korean language proficien
 						</li>			
 						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/marketing_NARGEO.jpg')}}"><span><b>NARGEO S. GERONA </b><br>MARKETING MANAGER<br>TACLOBAN BRANCH</span></a>
 							
-						</li>								
+						</li>
+						<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/organization/FIONA ANGEL ARAIS-Manager-Bohol branch-crop.jpeg"><span><b>FIONA ANGEL ARAIS </b><br>MANAGER<br>BOHOL BRANCH</span></a>
+							
+						</li>
+						<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/organization/JULVIE POSTRANO-MANAGER-BUTUAN BRANCH.jpeg"><span><b>JULVIE POSTRANO </b><br>MANAGER<br>BUTUAN BRANCH</span></a>
+							
+						</li>
 						<ul><!--4-->	
 						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_teacher_1.jpg')}}"><span><b> CRISTINE DAEL </b><br>TEACHER|SECRETARY</span></a>
 							<div class="content">  
@@ -170,6 +176,12 @@ We are committed to assisting Filipinos in passing the Korean language proficien
 							<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_marivie_hellena.jpg')}}"><span> <b>MARIVIE HELLENA </b><br>KOREAN LANGUAGE TEACHER<br>EPS-KLT PASSER<br>PALAWAN BRANCH</span></a>
 								
 							</li>
+                            <li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/organization/CECILE ANODAN-TEACHER-BUTUAN BRANCH.jpeg"><span><b>CECILE ANODAN </b><br>TEACHER<br>BUTUAN BRANCH</span></a>
+                                
+                            </li>
+                            <li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/organization/Mariel Digal-Teacher-Bohol branch-crop.jpeg"><span><b>MARIEL DIGAL </b><br>TEACHER<br>BOHOL BRANCH</span></a>
+                                
+                            </li>
 						</ul><!--5-->
 							<ul><!--6-->
 								<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <br>SECRETARY</span></a>
